[package]
name = "loggingdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "valuable"] }